fixed article browser caption alignment

--- a/app/static/articles.css
+++ b/app/static/articles.css
@@ -110,6 +110,7 @@ span.article-name {
 
 span.centered {
     margin: auto;
+    display: block;
 }
 
 
